# kernel_slicer

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists1.txt  CMakeLists_normal.txt  LICENSE  README.md  README_ex01.md  README_ex03.md  README_ex04.md  README_ex05.md  ast_matchers.cpp  ast_matchers.h  attributes.cpp  block_expansion.cpp  class_data.cpp  class_gen.cpp  class_gen.h  class_gen_gpv.cpp  class_gen_ipv.cpp  class_gen_rtv.cpp  class_gen_vfh.cpp  clone_dependencies.bat  copystl.sh  extractor.cpp  extractor.h  fetch_sources.bat  initial_pass.cpp  initial_pass.h  initial_pass_compos.cpp  kslicer.h  kslicer_def.cpp  kslicer_main.cpp  kslicer_utils.cpp  kslicer_warnings.cpp  kslicer_warnings.h  reduction.cpp  rewrite_control.cpp  rewrite_functions.cpp  rewrite_kernel.cpp  (+15 more)
TINYSTL/: algorithm  allocator  array  assert.h  buffer.h  cassert  cfloat  chrono  climits  cmath  cstddef  cstdint  cstdlib  cstring  filesystem  float.h  fstream  initializer_list  iostream  istream  limits  map  memory  new  numeric  omp.h  ostream  sstream  stdarg.h  stddef.h  stdexcept  stdint.h  stdio.h  stdlib.h  string  string.h  traits  tuple  type_traits  unordered_map  (+3 more)
ai_helper/: xyz_coder.py
apps/01_intersectSphere/: CMakeLists.txt  hint.json  kmake.json  main.cpp  temp_tests_gpu.cpp  test_class.cpp  test_class.h  test_class_gpu.cpp
apps/01_intersectSphere/include/: BasicLogic.h  OpenCLMath.h
apps/03_spheresStupidPt_loopBreak/: CMakeLists.txt  hint.json  main.cpp  test_class.cpp  test_class.h  test_class_gpu.cpp
apps/03_spheresStupidPt_loopBreak/include/: BasicLogic.h  CircleToCLMath.h  OpenCLMath.h  crandom.h
apps/04_array_summ/: CMakeLists.txt  main.cpp  test_class.cpp  test_class.h  test_class_gpu.cpp
apps/05_filter_bloom_good/: CMakeLists.txt  kmake_slang.json  main.cpp  test_class.cpp  test_class.h  test_class_gpu.cpp  test_class_gpu.h  test_class_gpu_ds.cpp  test_class_gpu_init.cpp
apps/05_filter_bloom_good/include/: BasicLogic.h  CircleToCLMath.h  ToneMapping_gpu_ubo.h
apps/05_filter_bloom_good/shaders_gpu/: build.bat  common_gpu.h  kernel2D_BlurX.comp  kernel2D_BlurY.comp  kernel2D_DownSample4x.comp  kernel2D_ExtractBrightPixels.comp  kernel2D_MixAndToneMap.comp
apps/06_android/app/: CMakeLists.txt  build.gradle
apps/06_android/app/src/main/: AndroidManifest.xml
apps/06_android/app/src/main/jni/: AndroidMain.cpp  android_input.cpp  android_input.h
apps/06_android/app/src/main/res/values/: strings.xml
apps/100_android_compute/app/: CMakeLists.txt  build.gradle
apps/100_android_compute/app/src/main/: AndroidManifest.xml
apps/100_android_compute/app/src/main/jni/: AndroidMain.cpp  Bitmap.cpp  Bitmap.h  ImageLoader.cpp  ImageLoader.h
apps/100_android_compute/app/src/main/res/values/: strings.xml
apps/13_virtual_func_rt_test2/: CMakeLists.txt  hello_tri.cpp  hello_tri.h  main.cpp  test_class.cpp  test_class.h  test_class_generated.cpp  test_class_generated.h  test_class_generated_ds.cpp  test_class_generated_init.cpp  test_class_gpu.cpp  test_class_scene.cpp  z_generated.cl  z_generated.cl.spv
apps/13_virtual_func_rt_test2/include/: BasicLogic.h  OpenCLMath.h  OpenCLMathCPU.h  TestClass_ubo.h  crandom.h
apps/13_virtual_func_rt_test2/shaders/: compile.sh  frag.spv  fragment.frag  raytrace.comp  raytrace.comp.spv  vert.spv  vertex.vert
apps/16_simple_pt_inst/: CMakeLists.txt  main.cpp  test_class.cpp  test_class.h  test_class_gpu.cpp  test_class_scene.cpp
apps/16_simple_pt_inst/include/: BasicLogic.h  crandom.h
apps/17_c_image_proc/: CMakeLists.txt  box_blur.txt  contrast.txt  grad_x.txt  grad_y.txt  image_proc.c  image_proc.h  laplacian.txt  low_pass.txt  main.c  test_cpu.sh
apps/19_simple_2d_cfd_solver/: CMakeLists.txt  main.cpp  test_class.cpp  test_class.h  test_class_gpu.cpp  test_class_gpu.h
apps/20_mis_pt_textures/: CMakeLists.txt  imageutils.cpp  main.cpp  test_class.cpp  test_class.h  test_class2.cpp  test_class_scene.cpp
apps/20_mis_pt_textures/include/: BasicLogic.h  cglobals.h  cmaterial.h
apps/21_raymarch_v1/: Bitmap.cpp  Bitmap.h  CMakeLists.txt  main.cpp  raymarch.cpp  raymarch.h  raymarch.ispc
apps/21_raymarch_v1/cmake/: AddISPCExampleLegacy.cmake
apps/25_mandelbrot/: CMakeLists.txt  main.cpp  mandelbrot.cpp  mandelbrot.h
apps/LiteMath/: CMakeLists.txt  Image2d.cpp  Image2d.h  LiteMath.h  LiteMath2.h  LiteMathGPU.h  LiteMathISPC.h  LiteMathVEX.h  OpenCLMath.h  OpenCLMathCPU.h  OpenCLMathGPU.h  OpenCLMathVEX.h  aligned_alloc.h  sampler.h  texture2d.cpp  texture2d.h  vfloat4_arm.h  vfloat4_gcc.h  vfloat4_x64.h
apps/LiteMath/cmake_modules/: CodeCoverage.cmake
apps/LiteMath/test_gen/: CMakeLists.txt  gen_main.cpp
apps/LiteMath/test_gen/templates/: lite_math.h  tests.h  tests_arith.cpp  tests_main.cpp
apps/LiteMath/tests/: main.cpp  tests_general.cpp  tests_main.cpp  tests_scalar.cpp
apps/ai_generated/01_image_gauss_blur/: CMakeLists.txt  blur.cpp  blur.h  main.cpp
apps/tests/019_compos_rtx/: CMakeLists.txt  main.cpp  test_class.cpp  test_class.h
apps/tests/044_memer_func_simple/: CMakeLists.txt  main.cpp  test_class.cpp  test_class.h
apps/tests/050_matrix_rot/: CMakeLists.txt  main.cpp  test_class.cpp  test_class.h
apps/z_pointer_cast_glsl/: CMakeLists.txt  main.cpp  test_class_gpu.cpp
apps/z_pointer_cast_glsl/shaders/: pcast.comp
data/: test.cpp  test_class.cpp
doc/: README_build_with_llvm.md  README_ex00.md  README_ex01.md  README_ex03.md  README_ex05.md  README_glue.md  README_internal.md  abc.dot  frontend.tex
doc_rus/: main.tex  structure.tex
include/: inja.hpp
other/: build-with-llvm.sh
python_scripts/: .gitignore  README.md  compare_images.py  compare_json.py  download_resources.py  gen_sample_list.py  logger.py  requirements.txt  run_tests.bat  sample_config.py  tests.py  tests_config.py  utils.py
stdlib/: cmath  limits  vector
templates/: gen_circle.cxx  generated.cl  inc_args.cl  inc_exit_cond.cl  inc_maker.cl  inc_reduction_finish.h  inc_reduction_init.h  inc_reduction_inkernel.h  inc_reduction_vulkan.cpp  inc_vkernel.cl  indirect.cl  main_class_decl.h  main_class_impl.cpp  (+13 more)
(+528 files in other folders)
